Fixed the html formatting issue in quiz.html and result.html. I just copied the formatting from the style.css into each html file. This copied code but fixed the issue of the top 2 questions being cut off so if we have time we can fix that later. I also got the results page working and displaying what seems to be correct data but yall should test to make sure

--- a/quiz/static/css/style.css
+++ b/quiz/static/css/style.css
@@ -2,11 +2,8 @@
 body {
     font-family: 'Segoe UI', sans-serif;
     background: linear-gradient(120deg, coral, #93FFe0);
-    height: 100vh;
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
 }
 
 .container {
